BSE: memory: add aligned memory area and block allocator
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -57,6 +57,7 @@ bse_public_headers = $(strip \
 	bseieee754.hh		\
 	bseincluder.hh		\
 	ladspa.hh		\
+	memory.hh		\
 	testobject.hh		\
 )
 # BSE C & C++ sources
@@ -97,6 +98,7 @@ bse_sources = $(strip \
 	bsebusmodule.cc		\
 	bsebasics.cc		\
 	bseprobe.cc		\
+	memory.cc		\
 	testobject.cc		\
 )
 # BSE Synthesis Modules
