--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -78,6 +78,7 @@ doc_sources = $(beast_headers) $(bst_cc_sources) $(beast_extra_files)
 doc_sources.lst: Makefile
 	$(AM_V_GEN)
 	$(Q) echo $(patsubst %, beast-gtk/%, $(doc_sources)) > $@
+CLEANFILES += doc_sources.lst
 
 
 SFIDL = ../sfi/sfidl
