--- a/af-tests/Makefile.sub
+++ b/af-tests/Makefile.sub
@@ -188,6 +188,7 @@ af-tests/soundfont-test: af-tests/soundfont-test.bse af-tests/soundfont-test.ref
 	$(Q) $(AF_TESTS_BSE2WAV) $@.bse $@.wav
 	$(Q) $(BSEFEXTRACT) $@.wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy --end-time  > $@.tmp
 	$(Q) $(BSEFEXTRACT) $@.wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy --end-time >> $@.tmp
+	@: # fluidsynth >= 1.1.7 contains a modulator bugfix (FluidSynth/fluidsynth#194), so lower the thresholds for older versions
 	$(Q) $(BSEFCOMPARE) $@.ref $@.tmp --threshold $(shell $(VERSIONCMP) $(FLUID_VERSION) 1.1.7 99.99 99.7)
 	$(Q) rm -f $@.wav $@.tmp
 check-af-tests: af-tests/soundfont-test
