.travis.yml: upgrade clang test builds to bionic
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ env:
     - DIST="ubuntu:bionic"      INTENT="gccbuild"
     # test upcoming releases and get new compiler warnings
     - DIST="ubuntu:cosmic"      INTENT="gccbuild"
-    - DIST="ubuntu:artful"      INTENT="clangbuild"
+    - DIST="ubuntu:bionic"      INTENT="clangbuild"
     - DIST="debian:unstable"    INTENT="gccbuild"
     - DIST="debian:unstable"    INTENT="clangbuild"
 matrix:
   allow_failures:
     - env: DIST="ubuntu:cosmic"      INTENT="gccbuild"
-    - env: DIST="ubuntu:artful"      INTENT="clangbuild"
+    - env: DIST="ubuntu:bionic"      INTENT="clangbuild"
     - env: DIST="debian:unstable"    INTENT="gccbuild"
     - env: DIST="debian:unstable"    INTENT="clangbuild"
   fast_finish: true
