configure.ac: bump version to 0.12.0-beta.1
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -13,8 +13,8 @@ AC_PREREQ(2.57)
 # * ABI_VERSION:     Record the latest version since ABI compatibility has been kept
 # * ABI changes:     Increment MAJOR or MINOR and reset ABI_VERSION to the current VERSION
 # * ~RC:             Release candidate, may contain ~rc[0-9]+ or nothing
-AC_INIT([beast], [0.0.0-dev])
-:;   ABI_VERSION=[0.0.0]
+AC_INIT([beast], [0.12.0-beta.1])
+:;   ABI_VERSION=[0.12.0]
 AC_CONFIG_SRCDIR([bse/bseserver.cc])
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_MACRO_DIR([config])
