--- a/data/beast.desktop.in
+++ b/data/beast.desktop.in
@@ -3,7 +3,7 @@ Type=Application
 _Name=BEAST
 _GenericName=Music Composer
 _Comment=MIDI Tracker, Music Composition and Modular Synthesis Application
-Icon=beast.png
+Icon=beast
 TryExec=beast
 Exec=beast %F
 Terminal=false
