--- a/Makefile.am
+++ b/Makefile.am
@@ -106,9 +106,15 @@ installcheck-buildtest:
 .PHONY: installcheck-buildtest
 installcheck-local: installcheck-buildtest
 
-# == topbuildid.cc ==
-topbuildid ::= $(shell $(topdir)/misc/mkbuildid.sh -p topbuildid.cc topbuildid.hh) # "update rule" for topbuildid.cc
-topbuildid.cc: # avoid explicit deps, 'topbuildid::=' ensures updates
+# == topbuildid.c ==
+topbuildid ::= $(shell $(topdir)/misc/mkbuildid.sh -p)
+topbuildid.cc: # avoid explicit deps, silently *always* rebuild via 'topbuildidcc_gen::='
+topbuildidcc_gen ::= $(shell \
+	echo '\#include "topbuildid.hh"'                                  > topbuildid.tmp && \
+	echo 'const char* bse_topbuildid () { return "$(topbuildid)"; }' >> topbuildid.tmp && \
+	( cmp topbuildid.tmp topbuildid.cc 2>/dev/null && \
+	  rm -f topbuildid.tmp || (mv topbuildid.tmp topbuildid.cc && \
+				   echo "  UPDATE  " topbuildid.cc) ))	# "update rule" for topbuildid.cc
 CLEANFILES += topbuildid.cc	# preserve across 'mostlyclean' if unchanged to avoid expensive rebuilds
 buildid:
 	@echo $(topbuildid)
