--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -13,7 +13,7 @@ man5_HTMLS  =
 
 topdir = $(abs_top_srcdir)
 V_gen = @printf '  %-9s%s\n'
-topbuildid ::= $(shell $(topdir)/misc/mkbuildid.sh -p)
+topbuildid ::= $(shell $(topdir)/git-version.sh)
 
 # == Collect Doxygen Sources ==
 # The following variable definitions create files as a side effect, which should be
