Makefile.am: add git-version.cache to release tarballs
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -143,8 +143,10 @@ dist: all
 	$(Q) rm -rf .tmpdist/ &&					\
 	  mkdir .tmpdist/ &&						\
 	  tar -C .tmpdist/ -xf $(distname).tar &&			\
+	  EXTRA_GITDIST_DIR=`pwd`"/.tmpdist/$(distname)/" &&		\
+	  ./git-version.sh > "$$EXTRA_GITDIST_DIR/git-version.cache" &&	\
 	  $(MAKE) $(AM_MAKEFLAGS) extra-gitdist				\
-		  EXTRA_GITDIST_DIR=`pwd`"/.tmpdist/$(distname)/" &&	\
+		  EXTRA_GITDIST_DIR="$$EXTRA_GITDIST_DIR" &&		\
 	  cd .tmpdist/$(distname)/ &&					\
 	  ./autogen.sh --help >/dev/null &&				\
 	  cd ../ &&							\
