configure.ac, **/Makefile.am: remove DEFINE__FILE_DIR__ leftovers
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -6,7 +6,7 @@ topdir = $(abs_top_srcdir)
 SUBDIRS = gxk icons
 
 AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I.
-DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN="\"BEAST\""
+DEFS        += -DG_LOG_DOMAIN="\"BEAST\""
 AM_CXXFLAGS += $(BEAST_CFLAGS) $(GXK_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DBSE_CONVENIENCE \
 			-DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN # -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_COMPAT_H
 AM_CPPFLAGS += $(PYTHON_CPPFLAGS)
@@ -15,7 +15,7 @@ AIDACC       = $(topdir)/aidacc/aidacc
 
 
 # special profiling hooks
-DEFS += @DEFINE__FILE_DIR__@ # $(subst profile.cc, -pg -a, $(findstring profile.cc, $(<F)))
+DEFS += # $(subst profile.cc, -pg -a, $(findstring profile.cc, $(<F)))
 LIBS += # -lefence # -pg 
 
 #
