--- a/drivers/bse-portaudio/Makefile.am
+++ b/drivers/bse-portaudio/Makefile.am
@@ -1,7 +1,7 @@
 # BEAST & BSE
 
 AM_CPPFLAGS += -I$(srcdir) -I$(top_builddir)
-DEFS        += @DEFINE__FILE_DIR__@ $(strip -DG_LOG_DOMAIN=\"BSE-PortAudio\")
+DEFS        += $(strip -DG_LOG_DOMAIN=\"BSE-PortAudio\")
 AM_CXXFLAGS += $(BSE_CFLAGS)
 
 # make automake1.9 happy
