--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -2,7 +2,7 @@
 include $(top_srcdir)/Makefile.decl
 
 AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir) -I.
-DEFS        += @DEFINE__FILE_DIR__@ -DBINDIR=\"$(beastbindir)\"
+DEFS        += -DBINDIR=\"$(beastbindir)\"
 AM_CXXFLAGS += $(LAUNCHER_CFLAGS) -DG_DISABLE_CONST_RETURNS
 
 #
