--- a/drivers/Makefile.am
+++ b/drivers/Makefile.am
@@ -2,7 +2,7 @@
 include $(top_srcdir)/Makefile.decl
 
 AM_CPPFLAGS += -I$(top_srcdir) -I.
-DEFS        += @DEFINE__FILE_DIR__@ $(strip -DG_LOG_DOMAIN=\"BSE-ALSA\") -DBSE_PLUGIN_COMPILATION
+DEFS        += $(strip -DG_LOG_DOMAIN=\"BSE-ALSA\") -DBSE_PLUGIN_COMPILATION
 AM_CXXFLAGS += $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DBSE_CONVENIENCE
 
 # Plugin bsedevice-alsa
